fpp_analysis/src/test/redef/module_constant.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/module_constant.fpp:2:10
  |
2 | constant M = 0
  |          ^ redefinition of symbol M
  |
 ::: [ local path prefix ]/redef/module_constant.fpp:1:1
  |
1 | module M { }
  | ------------ previous definition is here

